...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/gold_balance"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profile_gold_value"
        app:layout_constraintEnd_toStartOf="@+id/profile_gold_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_level_header" />

    <TextView
        android:id="@+id/profile_email_value"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/coins_collected_today"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profile_collected_value"
        app:layout_constraintEnd_toStartOf="@+id/profile_collected_value"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_gold_header" />

    <TextView
        android:id="@+id/profile_banked_header"
...
