...
    android:id="@+id/interactive">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignTop="@+id/interactive_top_bar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="0dp">

    </FrameLayout>
...
